test-cases/final-dump/trait_error_abstract_proc_purity.exp
Error detected during type checking of module(s) trait_error_abstract_proc_purity, trait_error_abstract_proc_purity.observer
final-dump/trait_error_abstract_proc_purity.wybe:7:1: Invalid implementation of trait trait_error_abstract_proc_purity.observer for type wybe.int: missing required proc observe
